fix: Rename assets to English to fix URL encoding issues

--- a/index.html
+++ b/index.html
@@ -768,15 +768,15 @@
             title: "这世界比 RPG 更硬核，记住你只是在扮演",
             author: "爱潜水的乌贼",
             tags: ["逻辑爆强世界观", "反差魅力主角"],
-            description: "22条神之途径，220种魔药，晋升序列，扮演角色，在成神之路上对抗疯狂与诱惑。",
-            cover: "男青年封面.png",
+            description: "在维多利亚时代的迷雾中，探索神秘学与蒸汽朋克，见证一位普通人的史诗成长。",
+            cover: "cover-male-youth.png",
             plays: "1.2亿",
-            badge: "会员",
-            ranking: "VIP榜No.1",
-            videoFile: "男青年-视频.mp4",
+            badge: "热播",
+            ranking: "总榜 Top1",
+            videoFile: "video-male-youth.mp4",
             albumTitle: "诡秘之主",
             episodes: 1488,
-            themeColor: "#1c2a4f",
+            themeColor: "#5a4d7c",
             highlights: [
                 {
                     title: "逻辑爆强世界观（男青年最爱）",
@@ -820,11 +820,11 @@
             author: "爱潜水的乌贼",
             tags: ["女性角色发光", "氛围感美学"],
             description: "在维多利亚时代的迷雾中，探索神秘学与蒸汽朋克，见证一位普通人的史诗成长。",
-            cover: "女青年封面.png",
+            cover: "cover-female-youth.png",
             plays: "9875万",
             badge: "会员",
             ranking: "新品榜No.3",
-            videoFile: "女青年-视频.mp4",
+            videoFile: "video-female-youth.mp4",
             albumTitle: "诡秘之主",
             episodes: 1488,
             themeColor: "#cfa98b",
@@ -855,12 +855,12 @@
             title: "一部讲透成人世界权力规则的硬核故事",
             author: "爱潜水的乌贼",
             tags: ["力量有代价", "成年人自律课"],
-            description: "力量的代价是责任，序列的晋升是枷锁。一部关于权力、扮演与自我坚守的深刻寓言。",
-            cover: "男中年封面.png",
+            description: "在维多利亚时代的迷雾中，探索神秘学与蒸汽朋克，见证一位普通人的史诗成长。",
+            cover: "cover-male-middle.png",
             plays: "8890万",
             badge: "会员",
-            ranking: "畅销榜No.2",
-            videoFile: "男青年-视频.mp4",
+            ranking: "飙升榜No.2",
+            videoFile: "video-male-youth.mp4",
             albumTitle: "诡秘之主",
             episodes: 1488,
             themeColor: "#4a4a4a",
@@ -891,12 +891,12 @@
             title: "在失序的世界，如何守护一个清醒的自己",
             author: "爱潜水的乌贼",
             tags: ["女性角色闪光", "情绪价值"],
-            description: "见证女性角色的独立与光芒，感受在孤独与责任中的每一次温柔而坚定的选择。",
-            cover: "女中年封面.png",
-            plays: "7654万",
+            description: "在维多利亚时代的迷雾中，探索神秘学与蒸汽朋克，见证一位普通人的史诗成长。",
+            cover: "cover-female-middle.png",
+            plays: "8890万",
             badge: "会员",
-            ranking: "口碑榜No.1",
-            videoFile: "男青年-视频.mp4",
+            ranking: "飙升榜No.2",
+            videoFile: "video-male-youth.mp4",
             albumTitle: "诡秘之主",
             episodes: 1488,
             themeColor: "#4b4269",
@@ -927,12 +927,12 @@
             title: "一个正直、稳重、有分寸的品质故事",
             author: "爱潜水的乌贼",
             tags: ["故事扎实可信", "主角正直"],
-            description: "故事逻辑严密，节奏沉稳，演绎一个有原则、有担当、有底线的成熟男人的史诗。",
+            description: "在维多利亚时代的迷雾中，探索神秘学与蒸汽朋克，见证一位普通人的史诗成长。",
             cover: "https://images.unsplash.com/photo-1472190649224-495422e1b602?auto=format&fit=crop&w=400&q=80",
             plays: "5432万",
             badge: "会员",
             ranking: "经典榜No.5",
-            videoFile: "男青年-视频.mp4",
+            videoFile: "video-male-youth.mp4",
             albumTitle: "诡秘之主",
             episodes: 1488,
             themeColor: "#3d3d3d",
@@ -963,12 +963,12 @@
             title: "适合静静听的温柔故事，像陪伴",
             author: "爱潜水的乌贼",
             tags: ["温柔善良的主角", "节奏稳"],
-            description: "故事温柔，节奏平稳，声音有温度。适合在睡前、散步时，静静感受陪伴的力量。",
+            description: "在维多利亚时代的迷雾中，探索神秘学与蒸汽朋克，见证一位普通人的史诗成长。",
             cover: "https://images.unsplash.com/photo-1547635289-3544a83b1a72?auto=format&fit=crop&w=400&q=80",
             plays: "4321万",
             badge: "会员",
             ranking: "治愈榜No.1",
-            videoFile: "男青年-视频.mp4",
+            videoFile: "video-male-youth.mp4",
             albumTitle: "诡秘之主",
             episodes: 1488,
             themeColor: "#8c7a6b",
